# fleet-vector-api

./: .gitignore  .npmignore  Cargo.toml  README.md  all-crates-raw.json  classification-results.json  classified-crates.json  package-lock.json  package.json  tsconfig.json  wrangler.toml
.wrangler/state/v3/cache/miniflare-CacheObject/: metadata.sqlite-shm  metadata.sqlite-wal
.wrangler/state/v3/kv/miniflare-KVNamespaceObject/: metadata.sqlite-shm  metadata.sqlite-wal
docs/: openapi-generated.json
scripts/: classify-and-ingest.js  classify-crates.js  full-classify.js  ingest-crates.ts
sdks/python/: README.md  pyproject.toml
sdks/python/fleet_vector_api/: __init__.py  client.py
sdks/python/tests/: test_client.py
src/: debug.ts  index.test.ts  index.ts  main.rs
