[package]
name = "fleet-vector-api"
version = "0.1.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/casey-digennaro/fleet-vector-api"
edition = "2021"
description = "Vector similarity search API for fleet embeddings"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
