[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fleet-vector-api"
version = "0.1.0"
description = "Python SDK for the Fleet Vector API — semantic search and recommendations for Rust crates"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "Casey DiGennaro"}]
keywords = ["fleet", "vector", "search", "rust", "crates"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "responses>=0.23.0",
]

[tool.setuptools.packages.find]
include = ["fleet_vector_api*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
